[package]
name = "web-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# argparse   = "0.2.2"
actix-web  = "4.4.0"
actix-cors = "0.6.4"
sqlx       = { version = "0.7.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
